--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,12 @@
         <p>HIGH: <b id="amzhigh1">Loading ...</b></p>
         <p>LOW: <b id="amzlow1">Loading ...</b></p>
     </ul>
+    <ul>
+        <p>SAP Labs </p>
+        <p>OPEN: <b id="sapopen">Loading ...</b></p>
+        <p>HIGH: <b id="saphigh1">Loading ...</b></p>
+        <p>LOW: <b id="saplow1">Loading ...</b></p>
+    </ul>
        
     <script src="script.js"></script>
 </body>
